# OpenNote

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  README.md
.claude/: settings.local.json
docs/: building-installer.md  cloud-sync-setup.md
include/: supernote.h
installer/: OpenNoteSetup.iss
lib/scintilla/: CMakeLists.txt
res/: manifest.xml  resource.h  supernote.rc
src/: app.c  app.h  main.c
src/core/: document.c  document.h  fileio.c  fileio.h  search.c  search.h
src/db/: database.c  database.h  links_repo.c  links_repo.h  notes_repo.c  notes_repo.h
src/sync/: github_sync.c  github_sync.h  google_sync.c  google_sync.h  oauth.c  oauth.h
src/ui/: dialogs.c  dialogs.h  editor.c  editor.h  mainwindow.c  mainwindow.h  menubar.c  menubar.h  statusbar.c  statusbar.h  tabcontrol.c  tabcontrol.h
